# Software_Quality

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
rest_rce/src/: constants.py  json_handler.py  main.py  tool_executor.py  utils.py
rest_rce/test/: test_dummy.py  test_json_handler.py  test_tool_executor.py
rest_rce/test/linux/: test_json_handler_linux.py  test_main_linux.py  test_tool_executor_linux.py
rest_rce/test/root/: configuration.json  invalid_key_configuration.json  syntax_invalid_configuration.json
rest_rce/test/shared/: test_json_handler_shared.py  test_main_shared.py  test_tool_executor_shared.py
rest_rce/test/tools/poly/: Thumbs.db  configuration.json  poly.bat  poly.sh  poly_timeout.bat  poly_timeout.sh
rest_rce/test/tools/root/: configuration.json  invalid_key_configuration.json  result.txt  root  syntax_invalid_configuration.json
rest_rce/test/windows/: test_json_handler_windows.py  test_main_windows.py  test_tool_executor.py  test_tool_executor_windows.py
