[tool.poetry]
name = "rest-rce"
version = "0.1.0"
description = "REST tool for tool integrations in RCE"
authors = ["BenB-01 <benburkert3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
ruff = "^0.8.4"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "N",
    "SIM",
    "I001",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
