[tool.poetry]
name = "rest_rce"
version = "0.1.0"
description = "REST tool for tool integrations in RCE"
authors = ["BenB-01 <benburkert3@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
rest_rce = "rest_rce.src.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = {extras = ["standard"], version = "^0.115.6"}
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "N",
    "SIM",
    "I001",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
